--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,10 @@
     background-image: url(../images/home_bg.jpg);
     background-color: aquamarine;
 }
+.login-bg{
+    background-image: url(../images/login_bg.jpg);
+    background-color: aquamarine;
+}
 
 .logo-home{
     width: 200px;
